# exdir-cpp

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
include/exdir/: dataset.hpp  file.hpp  group.hpp  ndarray.hpp  object.hpp  raw.hpp
src/: dataset.cpp  file.cpp  group.cpp  ndarray.cpp  npy.cpp  npy.hpp  object.cpp  raw.cpp
